syntax = "proto3";

import "PrintResponse.proto";
import "PrintRequest.proto";

option csharp_namespace = "Generated";

service PrintOperationService {
	rpc Print(PrintRequest) returns (PrintResponse);
}