syntax = "proto3";

option csharp_namespace = "Generated";

message PrintRequest
{
	string FirstOperand = 1;
}