syntax = "proto3";

option csharp_namespace = "Generated";

message PrintResponse
{
	string result = 1; 
}